Added pages: signup, lib-catalogue, add-book

--- a/public/test.html
+++ b/public/test.html
@@ -20,6 +20,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bowlby+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
   </head>
   <body>
         <nav class="sidebar close">
@@ -281,27 +283,22 @@
       </div>
     </div>
 
+    <div class="logo-set">
+      <div class="logo-div">
+      <a href="index.html" class="logo" >COBBLESTONE</a>
+      </div>
+      <div class="logo-small-div">
+        <a href="index.html" class="logo-small">Library</a>
+      </div>
+    </div>
+    
+
     <nav id="header-nav" class="navbar navbar-expand-lg py-3">
         <div class="container">
 
     <header id="header" class="site-header">
-        <a class="navbar-brand" href="index.html">
-            <img src="images/main-logo.png" class="logo">
-        </a>
-
       
-          <button class="navbar-toggler d-flex d-lg-none order-3 p-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation">
-            <svg class="navbar-icon">
-              <use xlink:href="#navbar-icon"></use>
-            </svg>
-          </button>
           <div class="offcanvas offcanvas-end" tabindex="-1" id="bdNavbar" aria-labelledby="bdNavbarOffcanvasLabel">
-            <div class="offcanvas-header px-4 pb-0">
-              <a class="navbar-brand" href="index.html">
-                <img src="images/main-logo.png" class="logo">
-              </a>
-              <button type="button" class="btn-close btn-close-black" data-bs-dismiss="offcanvas" aria-label="Close" data-bs-target="#bdNavbar"></button>
-            </div>
             <div class="offcanvas-body">
               <ul id="navbar" class="navbar-nav text-uppercase justify-content-start justify-content-lg-center align-items-start align-items-lg-center flex-grow-1">
                 <li class="nav-item serach-nav">
