--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -416,33 +416,39 @@
     <section class="register-body">
         <div class="form-group py-3">
             <label class="mb-2">First Name</label>
-            <input type="text" minlength="2" name="firstName" placeholder="First Name" class="form-control w-100 rounded-3 p-3" required="">
+            <label class="mb-2 error-label" id="fNameErrLab"></label>
+            <input type="text" minlength="2" name="firstName" placeholder="First Name" class="form-control w-60 rounded-3 p-3" required="" id="fName">
         </div>
         <div class="form-group pb-3">
             <label class="mb-2">Last Name</label>
-            <input type="text" minlength="2" name="lastName" placeholder="Last Name" class="form-control w-100 rounded-3 p-3" required="">
+            <label class="mb-2 error-label" id="lNameErrLab"></label>
+            <input type="text" minlength="2" name="lastName" placeholder="Last Name" class="form-control w-100 rounded-3 p-3" required="" id="lName">
         </div>
         <div class="form-group pb-3">
             <label class="mb-2">Address</label>
-            <input type="text" minlength="2" name="memberAddress" placeholder="Address" class="form-control w-100 rounded-3 p-3" required="">
+            <label class="mb-2 error-label" id="memAddrErrLab"></label>
+            <input type="text" minlength="2" name="memberAddress" placeholder="Address" class="form-control w-100 rounded-3 p-3" required="" id="memAddr">
         </div>
         <div class="form-group pb-3">
             <label class="mb-2">Phone Number</label>
-            <input type="text" minlength="2" name="phoneNumber" placeholder="Phone Number" class="form-control w-100 rounded-3 p-3" required="">
+            <label class="mb-2 error-label" id="memPhoneErrLab"></label>
+            <input type="text" minlength="2" name="phoneNumber" placeholder="Phone Number" class="form-control w-100 rounded-3 p-3" required="" id="memPhone">
         </div>
         <div class="form-group pb-3">
             <label class="mb-2">Email Address</label>
-            <input type="text" minlength="2" name="username" placeholder="Email" class="form-control w-100 rounded-3 p-3" required="">
+            <label class="mb-2 error-label" id="memEmailErrLab"></label>
+            <input type="text" minlength="2" name="username" placeholder="Email" class="form-control w-100 rounded-3 p-3" required="" id="memEmail">
         </div>
         <div class="form-group pb-3">
             <label class="mb-2">Password</label>
-            <input type="password" minlength="2" name="password" placeholder="Password" class="form-control w-100 rounded-3 p-3" required="">
+            <input type="password" minlength="2" name="password" placeholder="Password" class="form-control w-100 rounded-3 p-3" required="" id="memIniPass">
         </div>
         <div class="form-group pb-3">
             <label class="mb-2">Confirm Password </label>
-            <input type="password" minlength="2" name="confPassword" placeholder="Password" class="form-control w-100 rounded-3 p-3" required="">
+            <label class="mb-2 error-label" id="confPassErrLab"></label>
+            <input type="password" minlength="2" name="confPassword" placeholder="Password" class="form-control w-100 rounded-3 p-3" required="" id="memConfPass">
         </div>
-        <button type="submit" name="submit" class="btn btn-dark w-100 my-3">Register</button>
+        <button onclick="memRegister()" class="btn btn-dark w-100 my-3">Register</button>
     </section>
         
     <script src="js/jquery-1.11.0.min.js"></script>
@@ -451,7 +457,7 @@
     <script type="text/javascript" src="js/script.js"></script>
     
     <!--Custom Script-->
-    <script src="js/script.js"></script>
+    <script type="text/javascript" src="js/register.js"></script>
 
 
 </body>
