--- a/public/single-product.html
+++ b/public/single-product.html
@@ -242,7 +242,7 @@
                     </a>
                   </li>
                   <li class="pe-3">
-                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal" id="userIcon">
                       <svg class="user">
                         <use xlink:href="#user"></use>
                       </svg>
