Fixed sidebar issues on blog & shop

--- a/public/blog.html
+++ b/public/blog.html
@@ -251,7 +251,7 @@
                                     <nav>
                                       <div class="nav nav-tabs d-flex justify-content-center" id="nav-tab" role="tablist">
                                         <button class="nav-link text-capitalize active" id="nav-sign-in-tab" data-bs-toggle="tab" data-bs-target="#nav-sign-in" type="button" role="tab" aria-controls="nav-sign-in" aria-selected="true">Sign In</button>
-                                        <button class="nav-link text-capitalize" id="nav-register-tab" data-bs-toggle="tab" data-bs-target="#nav-register" type="button" role="tab" aria-controls="nav-register" aria-selected="false" tabindex="-1">Register</button>
+                                        
                                       </div>
                                     </nav>
                                     <div class="tab-content" id="nav-tabContent">
@@ -270,21 +270,6 @@
                                           <span class="label-body"><a href="#" class="fw-bold">Forgot Password</a></span>
                                         </label>
                                         <button type="submit" name="submit" class="btn btn-dark w-100 my-3">Login</button>
-                                      </div>
-                                      <div class="tab-pane fade" id="nav-register" role="tabpanel" aria-labelledby="nav-register-tab">
-                                        <div class="form-group py-3">
-                                          <label class="mb-2" for="register">Your email address *</label>
-                                          <input type="text" minlength="2" name="username" placeholder="Your Email Address" class="form-control w-100 rounded-3 p-3" required="">
-                                        </div>
-                                        <div class="form-group pb-3">
-                                          <label class="mb-2" for="sign-in">Password *</label>
-                                          <input type="password" minlength="2" name="password" placeholder="Your Password" class="form-control w-100 rounded-3 p-3" required="">
-                                        </div>
-                                        <label class="py-3">
-                                          <input type="checkbox" required="" class="d-inline">
-                                          <span class="label-body">I agree to the <a href="#" class="fw-bold">Privacy Policy</a></span>
-                                        </label>
-                                        <button type="submit" name="submit" class="btn btn-dark w-100 my-3">Register</button>
                                       </div>
                                     </div>
                                   </div>
@@ -516,7 +501,7 @@
             </nav>
           </main>
           <aside class="col-md-3">
-            <div class="sidebar">
+            <div class="sidebar-categories ps-lg-5">
               <div class="widget-menu">
                 <div class="widget-search-bar">
                   <form class="d-flex border rounded-3 p-2" role="search">
@@ -538,16 +523,16 @@
                     <a href="/collections/categories">All</a>
                   </li>
                   <li class="cat-item">
-                    <a href="#">Phones</a>
+                    <a href="#">Romance</a>
                   </li>
                   <li class="cat-item">
-                    <a href="#">Accessories</a>
+                    <a href="#">Recipie</a>
                   </li>
                   <li class="cat-item">
-                    <a href="#">Tablets</a>
+                    <a href="#">Sci-Fi</a>
                   </li>
                   <li class="cat-item">
-                    <a href="#">Watches</a>
+                    <a href="#">Lifestyle</a>
                   </li>
                 </ul>
               </div>
@@ -557,38 +542,54 @@
                 </div>
                 <ul class="product-tags mb-0 sidebar-list list-unstyled">
                   <li class="tags-item">
-                    <a href="#">White</a>
+                    <a href="#">Sci-Fi</a>
                   </li>
                   <li class="tags-item">
-                    <a href="#">Cheap</a>
+                    <a href="#">Revenge</a>
                   </li>
                   <li class="tags-item">
-                    <a href="#">Mobile</a>
+                    <a href="#">Zombie</a>
                   </li>
                   <li class="tags-item">
-                    <a href="#">Modern</a>
+                    <a href="#">Vampire</a>
                   </li>
                 </ul>
               </div>
-              <div class="widget-social-links pt-5">
+              <div class="widget-product-authur pt-5">
                 <div class="section-title overflow-hidden mb-2">
-                  <h3 class="d-flex flex-column mb-0">Social Links</h3>
+                  <h3 class="d-flex flex-column mb-0">authur</h3>
                 </div>
-                <ul class="social-links mb-0 sidebar-list list-unstyled">
-                  <li class="links">
-                    <a href="#">Facebook</a>
+                <ul class="product-tags mb-0 sidebar-list list-unstyled">
+                  <li class="tags-item">
+                    <a href="#">Hanna Clark</a>
                   </li>
-                  <li class="links">
-                    <a href="#">Instagram</a>
+                  <li class="tags-item">
+                    <a href="#">Albert E. Beth</a>
                   </li>
-                  <li class="links">
-                    <a href="#">Twitter</a>
+                  <li class="tags-item">
+                    <a href="#">D.K John</a>
                   </li>
-                  <li class="links">
-                    <a href="#">Youtube</a>
+                </ul>
+              </div>
+              <div class="widget-price-filter pt-5">
+                <div class="section-title overflow-hidden mb-2">
+                  <h3 class="d-flex flex-column mb-0">Filter by price</h3>
+                </div>
+                <ul class="product-tags mb-0 sidebar-list list-unstyled">
+                  <li class="tags-item">
+                    <a href="#">Less than $10</a>
                   </li>
-                  <li class="links">
-                    <a href="#">Pinterest</a>
+                  <li class="tags-item">
+                    <a href="#">$10- $20</a>
+                  </li>
+                  <li class="tags-item">
+                    <a href="#">$20- $30</a>
+                  </li>
+                  <li class="tags-item">
+                    <a href="#">$30- $40</a>
+                  </li>
+                  <li class="tags-item">
+                    <a href="#">$40- $50</a>
                   </li>
                 </ul>
               </div>
