--- a/public/index.html
+++ b/public/index.html
@@ -187,10 +187,10 @@
                   <a class="nav-link me-4" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link me-4" href="shop.html">Shop</a>
+                  <a class="nav-link me-4" href="catalogue.html">Catalogue</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link me-4" href="blog.html">Blogs</a>
+                  <a class="nav-link me-4" href="sign-up.html">Sign-up</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link me-4 dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Pages</a>
@@ -252,7 +252,6 @@
                               <nav>
                                 <div class="nav nav-tabs d-flex justify-content-center" id="nav-tab" role="tablist">
                                   <button class="nav-link text-capitalize active" id="nav-sign-in-tab" data-bs-toggle="tab" data-bs-target="#nav-sign-in" type="button" role="tab" aria-controls="nav-sign-in" aria-selected="true">Sign In</button>
-                                  <button class="nav-link text-capitalize" id="nav-register-tab" data-bs-toggle="tab" data-bs-target="#nav-register" type="button" role="tab" aria-controls="nav-register" aria-selected="false" tabindex="-1">Register</button>
                                 </div>
                               </nav>
                               <div class="tab-content" id="nav-tabContent">
@@ -271,22 +270,6 @@
                                     <span class="label-body"><a href="#" class="fw-bold">Forgot Password</a></span>
                                   </label>
                                   <button type="submit" name="submit" class="btn btn-dark w-100 my-3">Login</button>
-                                </div>
-                                <div class="tab-pane fade" id="nav-register" role="tabpanel" aria-labelledby="nav-register-tab">
-                                  <div class="form-group py-3">
-                                    <label class="mb-2" for="register">Your email address *</label>
-                                    <input type="text" minlength="2" name="username" placeholder="Your Email Address" class="form-control w-100 rounded-3 p-3" required="">
-                                  </div>
-                                  <div class="form-group pb-3">
-                                    <label class="mb-2" for="sign-in">Password *</label>
-                                    <input type="password" minlength="2" name="password" placeholder="Your Password" class="form-control w-100 rounded-3 p-3" required="">
-                                  </div>
-                                  <label class="py-3">
-                                    <input type="checkbox" required="" class="d-inline">
-                                    <span class="label-body">I agree to the <a href="#" class="fw-bold">Privacy
-                                        Policy</a></span>
-                                  </label>
-                                  <button type="submit" name="submit" class="btn btn-dark w-100 my-3">Register</button>
                                 </div>
                               </div>
                             </div>
