--- a/public/shop.html
+++ b/public/shop.html
@@ -977,7 +977,7 @@
             </nav>
           </main>
           <aside class="col-md-3">
-            <div class="sidebar ps-lg-5">
+            <div class="sidebar-categories ps-lg-5">
               <div class="widget-menu">
                 <div class="widget-search-bar">
                   <form class="d-flex border rounded-3 p-2" role="search">
