--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -410,7 +410,7 @@
         <div class="form-group pb-3">
             <label class="mb-2">Enter a password</label>
             <label class="mb-2 error-label" id="iniPassErrLab"></label>
-            <input type="password" minlength="2" name="password" placeholder="Password" class="form-control w-100 rounded-3 p-3" required="" id="memIniPass">
+            <input type="text" minlength="2" name="password" placeholder="Password" class="form-control w-100 rounded-3 p-3" required="" id="memIniPass">
         </div>
         <div class="form-group pb-3">
             <label class="mb-2">Confirm Password </label>
