--- a/public/add-book.html
+++ b/public/add-book.html
@@ -173,18 +173,14 @@
                         <div class="tab-pane fade active show" id="nav-sign-in" role="tabpanel" aria-labelledby="nav-sign-in-tab">
                         <div class="form-group py-3">
                             <label class="mb-2" for="sign-in">Username or email address *</label>
-                            <input type="text" minlength="2" name="username" placeholder="Your Username" class="form-control w-100 rounded-3 p-3" required="">
+                            <input type="text" minlength="2" name="username" placeholder="Your Username" class="form-control w-100 rounded-3 p-3" id="loginEmail" required="">
                         </div>
                         <div class="form-group pb-3">
                             <label class="mb-2" for="sign-in">Password *</label>
-                            <input type="password" minlength="2" name="password" placeholder="Your Password" class="form-control w-100 rounded-3 p-3" required="">
+                                    <input type="password" minlength="2" name="password" placeholder="Your Password" class="form-control w-100 rounded-3 p-3" id="loginPass" required="">
                         </div>
-                        <label class="py-3">
-                            <input type="checkbox" required="" class="d-inline">
-                            <span class="label-body">Remember me</span>
-                            <span class="label-body"><a href="#" class="fw-bold">Forgot Password</a></span>
-                        </label>
-                        <button type="submit" name="submit" class="btn btn-dark w-100 my-3">Login</button>
+<label class="py-3 error-label" id="logErrLab"></label>
+                        <button type="submit" onclick="userLog()" name="submit" class="btn btn-dark w-100 my-3">Login</button>
                         </div>
                     </div>
                     </div>
@@ -685,6 +681,8 @@
         
     </section>
     </div>
+
+    
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
