Added catalogue and single book js

--- a/public/about.html
+++ b/public/about.html
@@ -188,7 +188,7 @@
                   <a class="nav-link me-4 active" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link me-4" href="shop.html">Shop</a>
+                  <a class="nav-link me-4" href="library.html">library</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link me-4" href="blog.html">Blogs</a>
@@ -200,7 +200,7 @@
                       <a href="about.html" class="dropdown-item active fw-light">About</a>
                     </li>
                     <li>
-                      <a href="shop.html" class="dropdown-item fw-light">Shop</a>
+                      <a href="library.html" class="dropdown-item fw-light">library</a>
                     </li>
                     <li>
                       <a href="single-product.html" class="dropdown-item fw-light">Single Product</a>
@@ -489,7 +489,7 @@
                 <h3 class="mb-3">Best Bookstore of all time</h3>
                 <p class="pb-1">Risus augue curabitur diam senectus congue velit et. Sed vitae metus nibh sit era. Nulla adipiscing pharetra pellentesque maecenas odio eros at. Et libero vulputate amet duis erat volutpat vitae eget. Sed vitae metus nibh sit era. Nulla adipiscing pharetra eros at.
                 </p><p>Nulla adipiscing pharetra pellentesque maecenas odio eros at. Et libero vulputate amet duis erat volutpat vitae eget. Quam libero etiam et in ac at quis. Risus augue curabitur diam senectus congue velit et. </p>                
-                <a href="shop.html" class="btn mt-3">Go to shop</a>
+                <a href="library.html" class="btn mt-3">Go to library</a>
               </div>
             </div>
           </div>
@@ -562,7 +562,7 @@
           </div>
           <div class="swiper-slide" style="width: 744px; margin-right: 20px;" role="group" aria-label="3 / 5">
             <div class="card position-relative text-left p-5 border rounded-3">
-              <blockquote>"I ordered a few books online from this store, and I was impressed by the quick delivery and careful packaging. It's clear that they prioritize customer satisfaction, and I'll definitely be shopping here again!"</blockquote>
+              <blockquote>"I ordered a few books online from this store, and I was impressed by the quick delivery and careful packaging. It's clear that they prioritize customer satisfaction, and I'll definitely be libraryping here again!"</blockquote>
               <div class="rating text-warning d-flex align-items-center">
                 <svg class="star star-fill">
                   <use xlink:href="#star-fill"></use>
@@ -642,7 +642,7 @@
     <div class="container">
       <div class="section-title d-md-flex justify-content-between align-items-center mb-4">
         <h3 class="d-flex align-items-center">Latest posts</h3>
-        <a href="shop.html" class="btn">View All</a>
+        <a href="library.html" class="btn">View All</a>
       </div>
       <div class="row">
         <div class="col-md-3 posts mb-4">
@@ -824,7 +824,7 @@
                     <a href="#">About</a>
                   </li>
                   <li class="menu-item mb-1">
-                    <a href="#">Shop</a>
+                    <a href="#">library</a>
                   </li>
                   <li class="menu-item mb-1">
                     <a href="#">Blogs</a>
