--- a/public/cart.html
+++ b/public/cart.html
@@ -197,7 +197,7 @@
                   <a class="nav-link me-4" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link me-4" href="shop.html">Shop</a>
+                  <a class="nav-link me-4" href="library.html">library</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link me-4" href="blog.html">Blogs</a>
@@ -209,7 +209,7 @@
                       <a href="about.html" class="dropdown-item fw-light">About</a>
                     </li>
                     <li>
-                      <a href="shop.html" class="dropdown-item fw-light">Shop</a>
+                      <a href="library.html" class="dropdown-item fw-light">library</a>
                     </li>
                     <li>
                       <a href="single-product.html" class="dropdown-item fw-light">Single Product</a>
@@ -717,7 +717,7 @@
       <div class="container">
         <div class="section-title d-md-flex justify-content-between align-items-center mb-4">
           <h3 class="d-flex align-items-center">Latest posts</h3>
-          <a href="shop.html" class="btn">View All</a>
+          <a href="library.html" class="btn">View All</a>
         </div>
         <div class="row">
           <div class="col-md-3 posts mb-4">
@@ -899,7 +899,7 @@
                       <a href="#">About</a>
                     </li>
                     <li class="menu-item mb-1">
-                      <a href="#">Shop</a>
+                      <a href="#">library</a>
                     </li>
                     <li class="menu-item mb-1">
                       <a href="#">Blogs</a>
