--- a/public/lib-catalogue.html
+++ b/public/lib-catalogue.html
@@ -224,7 +224,7 @@
                   <a class="nav-link me-4" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link me-4" href="shop.html">Shop</a>
+                  <a class="nav-link me-4" href="library.html">library</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link me-4" href="blog.html">Blogs</a>
@@ -236,7 +236,7 @@
                       <a href="about.html" class="dropdown-item fw-light">About</a>
                     </li>
                     <li>
-                      <a href="shop.html" class="dropdown-item fw-light">Shop</a>
+                      <a href="library.html" class="dropdown-item fw-light">library</a>
                     </li>
                     <li>
                       <a href="single-product.html" class="dropdown-item fw-light">Single Product</a>
