--- a/public/single-product.html
+++ b/public/single-product.html
@@ -193,7 +193,7 @@
                   <a class="nav-link me-4" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link me-4" href="shop.html">Shop</a>
+                  <a class="nav-link me-4" href="library.html">library</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link me-4" href="blog.html">Blogs</a>
@@ -205,7 +205,7 @@
                       <a href="about.html" class="dropdown-item fw-light">About</a>
                     </li>
                     <li>
-                      <a href="shop.html" class="dropdown-item fw-light">Shop</a>
+                      <a href="library.html" class="dropdown-item fw-light">library</a>
                     </li>
                     <li>
                       <a href="single-product.html" class="dropdown-item active fw-light">Single Product</a>
@@ -393,24 +393,6 @@
       </nav>
 
     </header>
-
-    <section class="hero-section position-relative padding-large" style="background-image: url(images/banner-image-bg-1.jpg); background-size: cover; background-repeat: no-repeat; background-position: center; height: 400px;">
-      <div class="hero-content">
-        <div class="container">
-          <div class="row">
-            <div class="text-center">
-              <h1>Single-Product</h1>
-              <div class="breadcrumbs">
-                <span class="item">
-                  <a href="index.html">Home &gt; </a>
-                </span>
-                <span class="item text-decoration-underline">Single-Product</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
     
     <section class="single-product padding-large">
       <div class="container">
@@ -585,10 +567,8 @@
           <div class="tabs-listing">
             <nav>
               <div class="nav nav-tabs d-flex justify-content-center py-3" id="nav-tab" role="tablist">
-                <button class="nav-link text-capitalize active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Description</button>
+                <button class="nav-link text-capitalize active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true"> Book Description</button>
                 <button class="nav-link text-capitalize" id="nav-information-tab" data-bs-toggle="tab" data-bs-target="#nav-information" type="button" role="tab" aria-controls="nav-information" aria-selected="false" tabindex="-1">Additional information</button>
-                <button class="nav-link text-capitalize" id="nav-shipping-tab" data-bs-toggle="tab" data-bs-target="#nav-shipping" type="button" role="tab" aria-controls="nav-shipping" aria-selected="false" tabindex="-1">Shipping &amp; Return</button>
-                <button class="nav-link text-capitalize" id="nav-review-tab" data-bs-toggle="tab" data-bs-target="#nav-review" type="button" role="tab" aria-controls="nav-review" aria-selected="false" tabindex="-1">Reviews (02)</button>
               </div>
             </nav>
             <div class="tab-content border-bottom py-4" id="nav-tabContent">
@@ -606,118 +586,6 @@
                 <p>It is Comfortable and Best</p>
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               </div>
-              <div class="tab-pane fade" id="nav-shipping" role="tabpanel" aria-labelledby="nav-shipping-tab">
-                <p>Returns Policy</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eros justo, accumsan non dui sit amet. Phasellus semper volutpat mi sed imperdiet. Ut odio lectus, vulputate non ex non, mattis sollicitudin purus. Mauris consequat justo a enim interdum, in consequat dolor accumsan. Nulla iaculis diam purus, ut vehicula leo efficitur at.</p>
-                <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. In blandit nunc enim, sit amet pharetra erat aliquet ac.</p>
-                <p>Shipping</p>
-                <p>Pellentesque ultrices ut sem sit amet lacinia. Sed nisi dui, ultrices ut turpis pulvinar. Sed fringilla ex eget lorem consectetur, consectetur blandit lacus varius. Duis vel scelerisque elit, et vestibulum metus. Integer sit amet tincidunt tortor. Ut lacinia ullamcorper massa, a fermentum arcu vehicula ut. Ut efficitur faucibus dui Nullam tristique dolor eget turpis consequat varius. Quisque a interdum augue. Nam ut nibh mauris.</p>
-              </div>
-              <div class="tab-pane fade" id="nav-review" role="tabpanel" aria-labelledby="nav-review-tab">
-                <div class="review-box review-style d-flex gap-3 flex-column">
-                  <div class="review-item d-flex">
-                    <div class="image-holder me-2">
-                      <img src="images/review-image1.jpg" alt="review" class="img-fluid rounded-3">
-                    </div>
-                    <div class="review-content">
-                      <div class="rating text-primary">
-                        <svg class="star star-fill">
-                          <use xlink:href="#star-fill"></use>
-                        </svg>
-                        <svg class="star star-fill">
-                          <use xlink:href="#star-fill"></use>
-                        </svg>
-                        <svg class="star star-fill">
-                          <use xlink:href="#star-fill"></use>
-                        </svg>
-                        <svg class="star star-fill">
-                          <use xlink:href="#star-fill"></use>
-                        </svg>
-                        <svg class="star star-fill">
-                          <use xlink:href="#star-fill"></use>
-                        </svg>
-                      </div>
-                      <div class="review-header">
-                        <span class="author-name fw-medium">Tom Johnson</span>
-                        <span class="review-date">- 07/05/2022</span>
-                      </div>
-                      <p>Vitae tortor condimentum lacinia quis vel eros donec ac. Nam at lectus urna duis convallis convallis</p>
-                    </div>
-                  </div>
-                  <div class="review-item d-flex">
-                    <div class="image-holder me-2">
-                      <img src="images/review-image2.jpg" alt="review" class="img-fluid rounded-3">
-                    </div>                    
-                    <div class="review-content">
-                      <div class="rating text-primary">
-                        <svg class="star star-fill">
-                          <use xlink:href="#star-fill"></use>
-                        </svg>
-                        <svg class="star star-fill">
-                          <use xlink:href="#star-fill"></use>
-                        </svg>
-                        <svg class="star star-fill">
-                          <use xlink:href="#star-fill"></use>
-                        </svg>
-                        <svg class="star star-fill">
-                          <use xlink:href="#star-fill"></use>
-                        </svg>
-                        <svg class="star star-fill">
-                          <use xlink:href="#star-fill"></use>
-                        </svg>
-                      </div>
-                      <div class="review-header">
-                        <span class="author-name fw-medium">Jenny Willis</span>
-                        <span class="review-date">- 07/05/2022</span>
-                      </div>
-                      <p>Vitae tortor condimentum lacinia quis vel eros donec ac. Nam at lectus urna duis convallis convallis</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="add-review margin-small">
-                  <h3>Add a review</h3>
-                  <p>Your email address will not be published. Required fields are marked *</p>
-                  <div class="review-rating py-2">
-                    <span class="my-2">Your rating *</span>
-                    <div class="rating text-secondary">
-                      <svg class="star star-fill">
-                        <use xlink:href="#star-fill"></use>
-                      </svg>
-                      <svg class="star star-fill">
-                        <use xlink:href="#star-fill"></use>
-                      </svg>
-                      <svg class="star star-fill">
-                        <use xlink:href="#star-fill"></use>
-                      </svg>
-                      <svg class="star star-fill">
-                        <use xlink:href="#star-fill"></use>
-                      </svg>
-                      <svg class="star star-fill">
-                        <use xlink:href="#star-fill"></use>
-                      </svg>
-                    </div>
-                  </div>
-                  <input type="file" class="jfilestyle py-3 border-0" data-text="Choose your file">
-                  <form id="form" class="d-flex gap-3 flex-wrap">
-                    <div class="w-100 d-flex gap-3">
-                      <div class="w-50">
-                        <input type="text" name="name" placeholder="Write your name here *" class="form-control w-100">
-                      </div>
-                      <div class="w-50">
-                        <input type="text" name="email" placeholder="Write your email here *" class="form-control w-100">
-                      </div>
-                    </div>
-                    <div class="w-100">
-                      <textarea placeholder="Write your review here *" class="form-control w-100"></textarea>
-                    </div>
-                    <label class="w-100">
-                      <input type="checkbox" required="" class="d-inline">
-                      <span>Save my name, email, and website in this browser for the next time.</span>
-                    </label>
-                    <button type="submit" name="submit" class="btn my-3">Submit</button>
-                  </form>
-                </div>
-              </div>
             </div>
           </div>
         </div>
@@ -728,7 +596,7 @@
       <div class="container">
         <div class="section-title d-md-flex justify-content-between align-items-center mb-4">
           <h3 class="d-flex align-items-center">Related Items</h3>
-          <a href="shop.html" class="btn">View All</a>
+          <a href="library.html" class="btn">View All</a>
         </div>
         <div class="position-absolute top-50 end-0 pe-0 pe-xxl-5 me-0 me-xxl-5 swiper-next product-slider-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-610be154db55dc0ac" aria-disabled="false">
           <svg class="chevron-forward-circle d-flex justify-content-center align-items-center p-2" width="80" height="80">
@@ -1156,7 +1024,7 @@
     <div class="container">
       <div class="section-title d-md-flex justify-content-between align-items-center mb-4">
         <h3 class="d-flex align-items-center">Latest posts</h3>
-        <a href="shop.html" class="btn">View All</a>
+        <a href="library.html" class="btn">View All</a>
       </div>
       <div class="row">
         <div class="col-md-3 posts mb-4">
@@ -1338,7 +1206,7 @@
                     <a href="#">About</a>
                   </li>
                   <li class="menu-item mb-1">
-                    <a href="#">Shop</a>
+                    <a href="#">library</a>
                   </li>
                   <li class="menu-item mb-1">
                     <a href="#">Blogs</a>
