--- a/public/book.html
+++ b/public/book.html
@@ -373,7 +373,7 @@
                   
                 </div>
                 <div class="action-buttons my-3 d-flex flex-wrap gap-3">
-                  <a href="#" class="btn" id="reserve-button">Reserve a copy</a>
+                  <button class=" btn btn-dark" id="reserve-button">Reserve a copy</button>
                 </div>
               </div>
 <hr>
