Added view reservations and confirm loans

--- a/public/book.html
+++ b/public/book.html
@@ -373,7 +373,8 @@
                   
                 </div>
                 <div class="action-buttons my-3 d-flex flex-wrap gap-3">
-                  <button class=" btn btn-dark" id="reserve-button">Reserve a copy</button>
+                  <button class="btn btn-dark" id="reserve-button" onclick="makeReservation()">Reserve a copy</button>
+                  <label for="" class="error-label" id="reserve-label"></label>
                 </div>
               </div>
 <hr>
