Changed: modelIndex.js, loans and reseverve routes and cont

--- a/public/book.html
+++ b/public/book.html
@@ -330,6 +330,14 @@
                     </a>
                     <!-- Modal -->
                   </li>
+                  <li class="pe-3">
+                    <div class="dropdown">
+                      <i class="ri-account-circle-2-line  dropdown-toggle"id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>  
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                          <a class="dropdown-item" href="#" onclick="logout()">Logout</a>
+                        </div>
+                    </div>
+                  </li>
                 </ul>
               </div>
             </div>
