--- a/public/add-book.html
+++ b/public/add-book.html
@@ -282,6 +282,14 @@
                     </a>
                     <!-- Modal -->
                   </li>
+                  <li class="pe-3">
+                    <div class="dropdown">
+                      <i class="ri-account-circle-2-line  dropdown-toggle"id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>  
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                          <a class="dropdown-item" href="#" onclick="logout()">Logout</a>
+                        </div>
+                    </div>
+                  </li>
                   <li class="wishlist-dropdown dropdown pe-3">
                     <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-expanded="false">
                       <svg class="wishlist">
