--- a/public/lib-index.html
+++ b/public/lib-index.html
@@ -330,6 +330,14 @@
                     </a>
                     <!-- Modal -->
                   </li>
+                  <li class="pe-3">
+                    <div class="dropdown">
+                      <i class="ri-account-circle-2-line  dropdown-toggle"id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>  
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                          <a class="dropdown-item" href="#" onclick="logout()">Logout</a>
+                        </div>
+                    </div>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -337,6 +345,58 @@
         </header>
      </div>
     </nav>
+
+    <section class="hero-section position-relative padding-large" style="background-image: url(images/banner-image-bg-1.jpg); background-size: cover; background-repeat: no-repeat; background-position: center; height: 400px;">
+      <div class="hero-content">
+        <div class="container">
+          <div class="row">
+            <div class="text-center text-white">
+              <h1>Librarian Dahsboard</h1>
+              <div class="breadcrumbs">
+                <span class="item">
+                  <a href="lib-index.html" class="text-white">Home &gt; </a>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="container">
+      <div class="col-lg-6 mt-5 d-flex">
+        <div class="p-4">
+          <div class="card" style="width: 18rem; height: 30rem;">
+          <img class="card-img-top" src="images/insta-item1.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Check out books</h5>
+              <p class="card-text">Check out books for a requesting library member</p>
+              <a href="check-out.html" class="btn btn-primary">Go</a>
+            </div>
+        </div>
+        </div>
+        <div class="p-4">
+          <div class="card" style="width: 18rem; height: 30rem;">
+          <img class="card-img-top" src="images/check-in.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Check in books</h5>
+              <p class="card-text">Return books to inventory</p>
+              <a href="check-in.html" class="btn btn-primary">Go</a>
+            </div>
+        </div>
+        </div>
+        <div class="p-4">
+          <div class="card" style="width: 18rem; height: 30rem;">
+          <img class="card-img-top" src="images/stats.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">View Statistics</h5>
+              <p class="card-text">Check how the library is doing</p>
+              <a href="stats.html" class="btn btn-primary">Go</a>
+            </div>
+        </div>
+        </div>
+      </div>
+    </div>
 
     <footer id="footer" class="padding-large">
       <div class="container">
