--- a/public/test.html
+++ b/public/test.html
@@ -10,9 +10,6 @@
     <meta name="author" content="">
     <meta name="keywords" content="">
     <meta name="description" content="">
-
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
@@ -274,42 +271,7 @@
                   <a class="nav-link me-4" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link me-4" href="library.html">library</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link me-4" href="blog.html">Blogs</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link me-4 dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Pages</a>
-                  <ul class="dropdown-menu animate slide border">
-                    <li>
-                      <a href="about.html" class="dropdown-item fw-light">About</a>
-                    </li>
-                    <li>
-                      <a href="library.html" class="dropdown-item fw-light">library</a>
-                    </li>
-                    <li>
-                      <a href="single-product.html" class="dropdown-item fw-light">Single Product</a>
-                    </li>
-                    <li>
-                      <a href="cart.html" class="dropdown-item active fw-light">Cart</a>
-                    </li>
-                    <li>
-                      <a href="checkout.html" class="dropdown-item fw-light">Checkout</a>
-                    </li>
-                    <li>
-                      <a href="blog.html" class="dropdown-item fw-light">Blog</a>
-                    </li>
-                    <li>
-                      <a href="single-post.html" class="dropdown-item fw-light">Single Post</a>
-                    </li>
-                    <li>
-                      <a href="contact.html" class="dropdown-item fw-light">Contact</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link me-4" href="contact.html">Contact</a>
+                  <a class="nav-link me-4" href="library.html">Library</a>
                 </li>
 
               </ul>
@@ -329,6 +291,14 @@
                       </svg>
                     </a>
                     <!-- Modal -->
+                  </li>
+                  <li class="pe-3">
+                    <div class="dropdown">
+                      <i class="ri-account-circle-2-line  dropdown-toggle"id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>  
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" onclick="logout()">
+                          <a class="dropdown-item" href="#" onclick="logout()">Logout</a>
+                        </div>
+                    </div>
                   </li>
                 </ul>
               </div>
