--- a/public/blog.html
+++ b/public/blog.html
@@ -192,7 +192,7 @@
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link me-4 dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Pages</a>
-                  <ul class="dropdown-menu animate slide border">
+                  <ul class="dropdown-menu animate slide border" id="userOptions">
                     <li>
                       <a href="about.html" class="dropdown-item fw-light">About</a>
                     </li>
@@ -226,7 +226,7 @@
               </ul>
               <div class="user-items d-flex">
                 <ul class="d-flex justify-content-end list-unstyled mb-0">
-                  <li class="search-item pe-3">
+                  <li class="search-item pe-3" id="main-search">
                     <a href="#" class="search-button">
                       <svg class="search">
                         <use xlink:href="#search"></use>
@@ -234,7 +234,7 @@
                     </a>
                   </li>
                   <li class="pe-3">
-                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal" id="userIcon">
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal" id="userOptions">
                       <svg class="user">
                         <use xlink:href="#user"></use>
                       </svg>
