--- a/public/about.html
+++ b/public/about.html
@@ -229,7 +229,7 @@
               </ul>
               <div class="user-items d-flex">
                 <ul class="d-flex justify-content-end list-unstyled mb-0">
-                  <li class="search-item pe-3">
+                  <li class="search-item pe-3" id="main-search">
                     <a href="#" class="search-button">
                       <svg class="search">
                         <use xlink:href="#search"></use>
@@ -237,7 +237,7 @@
                     </a>
                   </li>
                   <li class="pe-3">
-                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal" id="userIcon">
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal" id="userOptions">
                       <svg class="user">
                         <use xlink:href="#user"></use>
                       </svg>
