Adding new html pages, editing inven management

--- a/public/add-book.html
+++ b/public/add-book.html
@@ -231,9 +231,9 @@
                         <use xlink:href="#user"></use>
                       </svg>
                     </a>
-                    <ul class="dropdown-menu animate slide border">
+                    <ul class="dropdown-menu animate slide border" id="userOptions">
                       <li>
-                        <a href="#" class="dropdown-item fw-light" data-bs-toggle="modal" data-bs-target="#exampleModal" id="userOptions"><button>Logout</button></a>
+                        <a href="#" class="dropdown-item fw-light" data-bs-toggle="modal" data-bs-target="#exampleModal">Login</a>
                       </li>
                     </ul>
                   </li>
