--- a/public/lib-index.html
+++ b/public/lib-index.html
@@ -315,7 +315,7 @@
     <div class="container">
       <div class="col-lg-6 mt-5 d-flex">
         <div class="p-4">
-          <div class="card" style="width: 18rem; height: 30rem;">
+          <div class="card" style="width: 18rem; height: 33rem;">
           <img class="card-img-top" src="images/insta-item1.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Check out books</h5>
@@ -325,22 +325,55 @@
         </div>
         </div>
         <div class="p-4">
-          <div class="card" style="width: 18rem; height: 30rem;">
+          <div class="card" style="width: 18rem; height: 33rem;">
           <img class="card-img-top" src="images/check-in.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Check in books</h5>
-              <p class="card-text">Return books to inventory</p>
+              <p class="card-text">Log books being returned, back into inventory</p>
               <a href="check-in.html" class="btn btn-primary">Go</a>
             </div>
         </div>
         </div>
         <div class="p-4">
-          <div class="card" style="width: 18rem; height: 30rem;">
+          <div class="card" style="width: 18rem; height: 33rem;">
+          <img class="card-img-top" src="images/inventory.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Manage Inventory</h5>
+              <p class="card-text">Edit book details and inventory figures in the database</p>
+              <a href="lib-catalogue.html" class="btn btn-primary">Go</a>
+            </div>
+        </div>
+        </div>
+        <div class="p-4">
+          <div class="card" style="width: 18rem; height: 33rem;">
           <img class="card-img-top" src="images/stats.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">View Statistics</h5>
-              <p class="card-text">Check how the library is doing</p>
+              <p class="card-text">Check how the library is performing metrically</p>
               <a href="stats.html" class="btn btn-primary">Go</a>
+            </div>
+        </div>
+        </div>
+      </div>
+
+      <div class="col-lg-6 mt-5 d-flex mx-auto">
+        <div class="p-4">
+          <div class="card" style="width: 18rem; height: 33rem;">
+          <img class="card-img-top" src="images/profile.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Profile</h5>
+              <p class="card-text">Access your personal information on the system</p>
+              <a href="lib-profile.html" class="btn btn-primary">Go</a>
+            </div>
+        </div>
+        </div>
+        <div class="p-4">
+          <div class="card" style="width: 18rem; height: 33rem;">
+          <img class="card-img-top" src="images/profile.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Admin</h5>
+              <p class="card-text">Add a new librarian to the system</p>
+              <a href="lib-sign-up.html" class="btn btn-primary">Go</a>
             </div>
         </div>
         </div>
