--- a/public/library.html
+++ b/public/library.html
@@ -295,6 +295,25 @@
       </nav>
     </header>
 
+  <section class="hero-section position-relative padding-large" style="background-image: url(images/banner-image-bg-1.jpg); background-size: cover; background-repeat: no-repeat; background-position: center; height: 400px;">
+      <div class="hero-content">
+        <div class="container">
+          <div class="row">
+            <div class="text-center text-white">
+              <h1>Library Catalogue</h1>
+              <div class="breadcrumbs">
+                <span class="item">
+                  <a href="index.html" class="text-white">Home &gt; </a>
+                </span>
+                <span class="item text-decoration-underline">Library</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
    <div class="shopify-grid padding-large">
       <div class="container">
         <div class="row flex-row-reverse g-md-5">
@@ -318,13 +337,18 @@
               </div>
             </div>
 
+            <!--Catalogue grid-->
             <div class="row product-content product-store" id="catalogue-grid">
             </div>
+
+            <!--Pagination grid-->
             <nav class="py-5" aria-label="Page navigation">
               <ul class="pagination justify-content-center gap-4" id="page-index">
               </ul>
             </nav>
           </main>
+
+          
           <aside class="col-md-3">
             <div class="sidebar-categories ps-lg-5">
               <div class="widget-menu">
