--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -295,6 +295,24 @@
       </nav>
     </header>
 
+    <section class="hero-section position-relative padding-large" style="background-image: url(images/banner-image-bg-1.jpg); background-size: cover; background-repeat: no-repeat; background-position: center; height: 400px;">
+      <div class="hero-content">
+        <div class="container">
+          <div class="row">
+            <div class="text-center text-white">
+              <h1>Registration</h1>
+              <div class="breadcrumbs">
+                <span class="item">
+                  <a href="index.html" class="text-white">Home &gt; </a>
+                </span>
+                <span class="item text-decoration-underline">Sign-up</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="col-lg-6 mx-auto">
         <div class="form-group py-3">
             <label class="mb-2">First Name</label>
